@@ -1,3 +1,5 @@
+* Use translated values when exporting Reference and Selection fields
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Allow to export model and record name of Reference fields
